--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Netflix Website Clone </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Netflix homepage/style.css">
     </head>
 
 <body>
  <div class="header">
     <nav>
-        <img src="/logo.png" class="logo">
+        <img src="Netflix homepage/logo.png" class="logo">
         <div>
-            <button class="language-btn">English <img src="/down-icon.png">
+            <button class="language-btn">English <img src="Netflix homepage/down-icon.png">
             </button>
             <button>Sign in</button>
         </div>
@@ -35,7 +35,7 @@
                     Blu-ray players and more.</p>
             </div>
             <div class="img-col">
-                <img src="feature-1.png">
+                <img src="Netflix homepage/feature-1.png">
             </div>
         </div>
     </div>
@@ -44,7 +44,7 @@
 
             <div class="features">
                 <div class="row"><div class="img-col">
-                    <img src="feature-2.png">
+                    <img src="Netflix homepage/feature-2.png">
                 </div>
                     <div class="text-col">
                         <h2>Download your shows to watch offline.</h2>
@@ -61,7 +61,7 @@
                         <p>Stream Unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
                     </div>
                     <div class="img-col">
-                        <img src="feature-3.png">
+                        <img src="Netflix homepage/feature-3.png">
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
 
             <div class="features">
                 <div class="row"><div class="img-col">
-                    <img src="feature-4.png">
+                    <img src="Netflix homepage/feature-4.png">
                 </div>
                     <div class="text-col">
                         <h2>Create profiles for children.</h2>
@@ -178,7 +178,7 @@
 
 
     </div>
-    <button class="language-btn">English <img src="/down-icon.png"></button>
+    <button class="language-btn">English <img src="Netflix homepage/down-icon.png"></button>
     <p class="copyright-txt">Netflix India</p>
 </div>
  </body>
